--- a/ApiAutomation/pom.xml
+++ b/ApiAutomation/pom.xml
@@ -134,4 +134,32 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd
 </dependency>
 
   </dependencies>
+	  <properties>
+  <!--  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  
+  <profiles>
+	  <profile>
+		  <id>Regression</id>
+		 
+		  <build>
+ <pluginManagement>
+  <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+</plugins>
+</pluginManagement>
+  </build>		  
+   </profile>
+  </profiles>
 </project>
